# didcomm_soldid_resolver_rs

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  w3c_doc_tests.rs
src/: config.rs  constants.rs  did_doc_builder.rs  errors.rs  lib.rs  resolver.rs  w3c_doc.rs
tests/: add-service.ts  add-verification-method.ts  cleanup.ts  integration_test.rs  resolver_tests.rs  setup.ts  test_context.rs  verification_tests.rs  w3c_doc_tests.rs
tests/scripts/: TestAnchorWallet.ts  add-service.ts  add-verification-method.ts  cleanup.ts  setup.ts  utils.ts
